--- a/lightdm/lightdm-mini-greeter.conf
+++ b/lightdm/lightdm-mini-greeter.conf
@@ -44,7 +44,7 @@ text-color = "#e1eef2"
 error-color = "#fc5571"
 # An absolute path to an optional background image.
 # The image will be displayed centered & unscaled.
-background-image = "/path/to/background.jpg"
+background-image = "/home/gabriel/wallpapers/greeter.jpg"
 # The screen's background color.
 background-color = "#727282"
 # The password window's background color
