--- a/polybar/config
+++ b/polybar/config
@@ -1,91 +1,82 @@
+;=========================================================
+;
+;
+;   ██████╗  ██████╗ ██╗  ██╗   ██╗██████╗  █████╗ ██████╗
+;   ██╔══██╗██╔═══██╗██║  ╚██╗ ██╔╝██╔══██╗██╔══██╗██╔══██╗
+;   ██████╔╝██║   ██║██║   ╚████╔╝ ██████╔╝███████║██████╔╝
+;   ██╔═══╝ ██║   ██║██║    ╚██╔╝  ██╔══██╗██╔══██║██╔══██╗
+;   ██║     ╚██████╔╝███████╗██║   ██████╔╝██║  ██║██║  ██║
+;   ╚═╝      ╚═════╝ ╚══════╝╚═╝   ╚═════╝ ╚═╝  ╚═╝╚═╝  ╚═╝
+;
+;
+;   To learn more about how to configure Polybar
+;   go to https://github.com/jaagr/polybar
+;
+;   The README contains alot of information
+;
+;==========================================================
+
+
+; pywal generated colors
 [colors]
-;background = ${xrdb:color0:#222}
-;background-alt = #444
-;foreground = ${xrdb:color7:#222}
-;foreground = #dfdfdf
-;foreground-alt = #555
-primary = #FFF
-secondary = #B2535B
-alert = #B2535B
+background = ${xrdb:color0:#222}
+foreground = ${xrdb:color7:#222}
+foreground-alt = ${xrdb:color7:#222}
+background-alt = ${xrdb:color0:#222}
+primary = ${xrdb:color1:#222}
+secondary = ${xrdb:color2:#222}
+alert = ${xrdb:color3:#222}
 
-;------------;
-; TOPBAR    ;
-;------------;
 
-[bar/PolybarTop]
-line-size = 2
+[bar/mybar]
+;monitor = ${env:MONITOR:HDMI-1}
+width = 100%
+height = 27
+;offset-x = 1%
+;offset-y = 1%
+; radius = 10.0
+; radius-bottom = 10.0
+radius-top    = 0.0
+fixed-center = true
+
+background = ${colors.background}
+foreground = ${colors.foreground}
+
+line-size = 3
 line-color = #f00
 
-border-size = 0
+; border-size = 10
+; border-left-size   = 400
+; border-right-size  = 400
+border-top-size    = 0
+border-bottom-size = 0
 border-color = #00000000
 
-;------------;
-; DIMENSIONS ;
-;------------;
+padding-left = 3
+padding-right = 3
 
-width = 100%
-height = 30
-offset-y = 4
-offset-x = 0
+module-margin-left = 1
+module-margin-right = 1
 
-border-top-size = 0
-border-bottom-size = 0
-border-right-size = 0
-border-left-size = 0
-
-;----------;
-; LOCATION ;
-;----------;
-
-bottom = false
-
-;-------;
-; FONTS ;
-;-------;
-
-font-0 = Cantarell:style=Regular:size=10:antialias=true;3"
-font-1 = "Font Awesome 5 Free:style=Solid:pixelsize=8;3"
-font-2 = "Font Awesome 5 Free:style=Regular:pixelsize=8;3"
-font-3 = "Font Awesome 5 Brands:pixelsize=8;3"
-
-;--------;
-; COLORS ;
-;--------;
-
-background = 0
-background-alt = #555
-foreground = #dfdfdf
-foreground-alt = #555
-primary = #E1D4AE
-secondary = #e60053
-alert = #B2535B
-
-;---------------;
-; MISCELLANEOUS ;
-;---------------;
-
-radius = 0.0
-fixed-center = true
-padding-left = 5
-padding-right = 5
-
-module-margin-left = 0
-module-margin-right = 0
-module-margin-top = 0
+font-0 = Roboto:pixelsize=10;1
+; font-0 = Roboto:style=Regular:pixelsize=10;1
+font-1 = unifont:fontformat=truetype:size=8:antialias=false;0
+font-2 = siji:pixelsize=10;1
 
 modules-left = i3
-modules-center = spotify #xwindow mpd
-modules-right = #pulseaudio date #powermenu
+modules-center = xwindow
+modules-right = powermenu wlan eth pulseaudio memory cpu temperature date battery
 
-tray-position = hidden
-tray-padding = 0
-;tray-transparent = true
+tray-position = right
+tray-padding = 2
 ;tray-background = #0063ff
 
 ;wm-restack = bspwm
-wm-restack = i3
+; wm-restack = i3
 
-override-redirect = true
+; Tell the Window Manager not to configure the window.
+; Use this to detach the bar if your WM is locking its size/position.
+override-redirect = false
 
 ;scroll-up = bspwm-desknext
 ;scroll-down = bspwm-deskprev
@@ -96,95 +87,9 @@ scroll-down = i3wm-wsprev
 cursor-click = pointer
 cursor-scroll = ns-resize
 
-;------------;
-; BOTBAR    ;
-;------------;
-
-[bar/PolybarBot]
-line-size = 1
-line-color = #f00
-
-border-size = 0
-border-color = #00000000
-wm-restack = i3
-override-redirect = true
-
-;------------;
-; DIMENSIONS ;
-;------------;
-
-width = 100%
-height = 30
-offset-y = 6
-offset-x = 0
-
-border-top-size = 0
-border-bottom-size = 0
-border-right-size = 0
-border-left-size = 0
-
-;----------;
-; LOCATION ;
-;----------;
-
-bottom = true
-
-;-------;
-; FONTS ;
-;-------;
-
-font-0 = Cantarell:style=Regular:size=10:antialias=true;3"
-font-1 = "Font Awesome 5 Free:style=Solid:pixelsize=11;3"
-font-2 = "Font Awesome 5 Free:style=Regular:pixelsize=11;3"
-font-3 = "Font Awesome 5 Brands:pixelsize=11;3"
-font-4 = "Scientifica:size=11;3"
-
-;--------;
-; COLORS ;
-;--------;
-
-background = 0
-background-alt = #555
-foreground = #dfdfdf
-foreground-alt = #555
-primary = #E1D4AE
-secondary = #e60053
-alert = #B2535B
-
-;---------------;
-; MISCELLANEOUS ;
-;---------------;
-
-radius = 0.0
-fixed-center = true
-padding-left = 0
-padding-right = 0
-
-module-margin-left = 0
-module-margin-right = 0
-
-modules-left = #i3
-modules-center = #spotify xwindow
-modules-right =
-
-;---------;
-; MODULES ;
-;---------;
-
-[module/spotify]
-type = custom/script
-interval = 1
-#format-prefix = "  "
-format = <label>
-exec = python $HOME/.config/polybar/spotify.py
-format-underline =
-format-foreground = ${colors.primary}
-
 [module/xwindow]
 type = internal/xwindow
-format-foreground = ${colors.primary}
-label = %title%
-label-maxlen = 80
+label = %title:0:30:...%
 
 [module/xkeyboard]
 type = internal/xkeyboard
@@ -202,67 +107,72 @@ label-indicator-margin = 1
 label-indicator-background = ${colors.secondary}
 label-indicator-underline = ${colors.secondary}
 
-[module/filesystem]
-type = internal/fs
-interval = 25
+[module/bspwm]
+type = internal/bspwm
 
-mount-0 = /
+label-focused = %index%
+label-focused-background = ${colors.background-alt}
+label-focused-underline= ${colors.primary}
+label-focused-padding = 2
 
-label-mounted =  HD %mountpoint% %percentage_used%% of %total%
-label-mounted-foreground = ${colors.primary}
-label-unmounted = %mountpoint% not mounted
-label-unmounted-foreground = ${colors.primary}
+label-occupied = %index%
+label-occupied-padding = 2
+
+label-urgent = %index%!
+label-urgent-background = ${colors.alert}
+label-urgent-padding = 2
+
+label-empty = %index%
+label-empty-foreground = ${colors.foreground-alt}
+label-empty-padding = 2
+
+; Separator in between workspaces
+; label-separator = |
 
 [module/i3]
 type = internal/i3
 format = <label-state> <label-mode>
-index-sort = false
+index-sort = true
 wrapping-scroll = false
 
-ws-icon-0 = 1;
-ws-icon-1 = 2;
-ws-icon-2 = 3;
-ws-icon-3 = 4;
-ws-icon-4 = 5;
-ws-icon-5 = 6;;
-ws-icon-6 = 7;;
-ws-icon-7 = 8;;
-ws-icon-8 = 9;;
-ws-icon-default = 
+ws-icon-0 = 1;_>
+ws-icon-1 = 2;♛
+ws-icon-2 = 3;♜
+ws-icon-3 = 4;♝
+ws-icon-4 = 5;♞
+ws-icon-default = ♟
 
 ; Only show workspaces on the same output as the bar
 ;pin-workspaces = true
 
-label-mode-padding = 0
-label-mode-foreground = #000000
+label-mode-padding = 2
+label-mode-foreground = #000
 label-mode-background = ${colors.primary}
 
 ; focused = Active workspace on focused monitor
-label-focused = %name%
-label-focused-background =
-label-focused-foreground = ${colors.secondary}
-label-focused-underline = ${colors.secondary}
-label-focused-padding = 2
+label-focused = %icon%
+label-focused-background = ${module/bspwm.label-focused-background}
+label-focused-underline = ${module/bspwm.label-focused-underline}
+label-focused-padding = ${module/bspwm.label-focused-padding}
 
 ; unfocused = Inactive workspace on any monitor
-label-unfocused = %name%
-label-unfocused-padding = 2
-label-unfocused-foreground = ${colors.primary}
-label-unfocused-underline =
+label-unfocused = %index%
+label-unfocused-padding = ${module/bspwm.label-occupied-padding}
 
 ; visible = Active workspace on unfocused monitor
-label-visible = %name%
+label-visible = %index%
 label-visible-background = ${self.label-focused-background}
 label-visible-underline = ${self.label-focused-underline}
 label-visible-padding = ${self.label-focused-padding}
 
 ; urgent = Workspace with urgency hint set
-label-urgent = %name%
-label-urgent-background = ${colors.alert}
-label-urgent-padding = 2
+label-urgent = %index%
+label-urgent-background = ${module/bspwm.label-urgent-background}
+label-urgent-padding = ${module/bspwm.label-urgent-padding}
 
 ; Separator in between workspaces
 ; label-separator = |
+
 
 [module/mpd]
 type = internal/mpd
@@ -281,18 +191,17 @@ label-song-ellipsis = true
 type = internal/xbacklight
 
 format = <label> <bar>
-label =  %percentage%%
-label-foreground = ${colors.primary}
+label = BL
 
 bar-width = 10
 bar-indicator = |
-bar-indicator-foreground = ${colors.primary}
-bar-indicator-font =
+bar-indicator-foreground = #fff
+bar-indicator-font = 2
 bar-fill = ─
-bar-fill-font = 4
+bar-fill-font = 2
 bar-fill-foreground = #9f78e1
 bar-empty = ─
-bar-empty-font = 4
+bar-empty-font = 2
 bar-empty-foreground = ${colors.foreground-alt}
 
 [module/backlight-acpi]
@@ -303,30 +212,29 @@ card = intel_backlight
 [module/cpu]
 type = internal/cpu
 interval = 2
-format-prefix = " CPU "
-format-prefix-foreground = ${colors.primary}
-format-underline =
+format-prefix = " "
+format-prefix-foreground = ${colors.foreground-alt}
+; format-underline = #f90000
+format-underline = ${colors.primary}
 label = %percentage:2%%
-label-foreground = ${colors.primary}
 
 [module/memory]
 type = internal/memory
 interval = 2
-format-prefix = " RAM "
-format-prefix-foreground = ${colors.primary}
-format-underline =
+format-prefix = " "
+format-prefix-foreground = ${colors.foreground-alt}
+; format-underline = #4bffdc
+format-underline = ${colors.foreground}
 label = %percentage_used%%
-label-foreground = ${colors.primary}
 
 [module/wlan]
 type = internal/network
-interface = wlp1s0
+interface =
 interval = 3.0
 
 format-connected = <ramp-signal> <label-connected>
-format-connected-underline =
+format-connected-underline = #9f78e1
 label-connected = %essid%
-label-connected-foreground = ${colors.primary}
 
 format-disconnected =
 ;format-disconnected = <label-disconnected>
@@ -334,16 +242,16 @@ format-disconnected =
 ;label-disconnected = %ifname% disconnected
 ;label-disconnected-foreground = ${colors.foreground-alt}
 
-ramp-signal-0 = 
-ramp-signal-1 = 
-ramp-signal-2 = 
-ramp-signal-3 = 
-ramp-signal-4 = 
-ramp-signal-foreground = ${colors.primary}
+ramp-signal-0 = 
+ramp-signal-1 = 
+ramp-signal-2 = 
+ramp-signal-3 = 
+ramp-signal-4 = 
+ramp-signal-foreground = ${colors.foreground-alt}
 
 [module/eth]
 type = internal/network
-interface = enp2s0
+interface =
 interval = 3.0
 
 format-connected-underline = #55aa55
@@ -359,59 +267,43 @@ format-disconnected =
 
 [module/date]
 type = internal/date
-interval = 1
+interval = 5
 
 date =
 date-alt = " %Y-%m-%d"
 
-time = %H:%M:%S
-time-alt =
+time = %H:%M
+time-alt = %H:%M:%S
 
-format-prefix =
-format-prefix-foreground = ${colors.primary}
-format-underline =
-format-foreground = ${colors.primary}
+format-prefix = 
+format-prefix-foreground = ${colors.foreground-alt}
+; format-underline = #0a6cf5
+format-underline = ${colors.foreground}
 
 label = %date% %time%
+
+
+[module/filesystem]
+type = internal/fs
+interval = 25
+
+mount-0 = /home
+mount-1 = /
+
+label-mounted = %{F#0a81f5}%mountpoint%%{F-}: %percentage_used%%
+label-unmounted = %mountpoint% not mounted
+label-unmounted-foreground = ${colors.foreground-alt}
 
 [module/pulseaudio]
 type = internal/pulseaudio
 
-format-volume = <label-volume> <bar-volume>
-format-volume-foreground = ${colors.primary}
-label-volume = %percentage%%
-label-volume-foreground = ${colors.primary}
-
-label-muted = mute
-label-muted-foreground = ${colors.secondary}
-
-bar-volume-width = 10
-bar-volume-foreground-0 = #55aa55
-bar-volume-foreground-1 = #55aa55
-bar-volume-foreground-2 = #55aa55
-bar-volume-foreground-3 = #55aa55
-bar-volume-foreground-4 = #55aa55
-bar-volume-foreground-5 = #f5a70a
-bar-volume-foreground-6 = #B2535B
-bar-volume-gradient = false
-bar-volume-indicator = |
-bar-volume-indicator-font = 4
-bar-volume-fill = ─
-bar-volume-fill-font = 4
-bar-volume-empty = ─
-bar-volume-empty-font = 4
-bar-volume-empty-foreground = ${colors.foreground-alt}
-
-[module/alsa]
-type = internal/alsa
 
 format-volume = <label-volume> <bar-volume>
-label-volume = VOL
+label-volume = VOL %percentage%%
 label-volume-foreground = ${root.foreground}
 
-format-muted-prefix = " "
-format-muted-foreground = ${colors.foreground-alt}
-label-muted = sound muted
+label-muted = 🔇 muted
+label-muted-foreground = #666
 
 bar-volume-width = 10
 bar-volume-foreground-0 = #55aa55
@@ -430,32 +322,124 @@ bar-volume-empty = ─
 bar-volume-empty-font = 2
 bar-volume-empty-foreground = ${colors.foreground-alt}
 
+[module/alsa]
+type = internal/alsa
+
+; Sink to be used, if it exists (find using `pacmd list-sinks`, name field)
+; If not, uses default sink
+; sink = alsa_output.pci-0000_12_00.3.analog-stereo
+sink = alsa_output.pci-0000_00_1b.0.analog-stereo
+
+; Available tags:
+;   <label-volume> (default)
+;   <ramp-volume>
+;   <bar-volume>
+format-volume = <label-volume> <bar-volume>
+
+; Available tokens:
+;   %percentage% (default)
+; label-volume = VOL
+label-volume = %percentage%%
+
+label-volume-foreground = ${root.foreground}
+
+format-muted-prefix = " "
+format-muted-foreground = ${colors.foreground-alt}
+label-muted = sound muted
+
+bar-volume-width = 10
+bar-volume-foreground-0 = #55aa55
+bar-volume-foreground-1 = #55aa55
+bar-volume-foreground-2 = #55aa55
+bar-volume-foreground-3 = #55aa55
+bar-volume-foreground-4 = #55aa55
+bar-volume-foreground-5 = #f5a70a
+bar-volume-foreground-6 = #ff5555
+bar-volume-gradient = false
+bar-volume-indicator = ›
+bar-volume-indicator-font = 2
+; bar-volume-fill = ─
+bar-volume-fill = ∙
+bar-volume-fill-font = 2
+; bar-volume-empty = ─
+bar-volume-empty = ∙
+bar-volume-empty-font = 2
+bar-volume-empty-foreground = ${colors.foreground-alt}
+
+[module/battery]
+type = internal/battery
+battery = BAT0
+adapter = ADP1
+full-at = 98
+
+format-charging = <animation-charging> <label-charging>
+format-charging-underline = #ffb52a
+
+format-discharging = <animation-discharging> <label-discharging>
+format-discharging-underline = ${self.format-charging-underline}
+
+format-full-prefix = " "
+format-full-prefix-foreground = ${colors.foreground-alt}
+format-full-underline = ${self.format-charging-underline}
+
+ramp-capacity-0 = 
+ramp-capacity-1 = 
+ramp-capacity-2 = 
+ramp-capacity-foreground = ${colors.foreground-alt}
+
+animation-charging-0 = 
+animation-charging-1 = 
+animation-charging-2 = 
+animation-charging-foreground = ${colors.foreground-alt}
+animation-charging-framerate = 750
+
+animation-discharging-0 = 
+animation-discharging-1 = 
+animation-discharging-2 = 
+animation-discharging-foreground = ${colors.foreground-alt}
+animation-discharging-framerate = 750
+
+[module/temperature]
+type = internal/temperature
+thermal-zone = 0
+warn-temperature = 60
+
+format = <ramp> <label>
+; format-underline = #f50a4d
+format-underline = ${colors.secondary}
+format-warn = <ramp> <label-warn>
+format-warn-underline = ${self.format-underline}
+
+label = %temperature-c%
+label-warn = %temperature-c%
+label-warn-foreground = ${colors.secondary}
+
+ramp-0 = 
+ramp-1 = 
+ramp-2 = 
+ramp-foreground = ${colors.foreground-alt}
+
 [module/powermenu]
 type = custom/menu
-expand-right = true
-format-spacing = 1
 
-label-open = "  "
-label-open-foreground = ${colors.primary}
-label-close = "  cancel "
-label-close-foreground = ${colors.secondary}
-label-separator = |
-label-separator-foreground = ${colors.primary}
+expand-left = true
 
-menu-0-0 = reboot
-menu-0-0-exec = sudo reboot
-menu-0-1 = power off
-menu-0-1-exec = sudo poweroff
+format-spacing = 2
 
-menu-1-0 = cancel
-menu-1-0-exec = menu-open-0
-menu-1-1 = reboot
-menu-1-1-exec = sudo reboot
+label-open = "options"
+label-open-font = 4
+label-open-foreground = ${colors.foreground-alt}
+label-close = "  cancel"
+label-close-foreground = ${colors.foreground-alt}
+label-separator = " | "
+label-separator-foreground = ${colors.foreground}
 
-menu-2-0 = power off
-menu-2-0-exec = sudo poweroff
-menu-2-1 = cancel
-menu-2-1-exec = menu-open-0
+; reboot
+menu-0-1 = "reboot  "
+menu-0-1-exec = systemctl reboot
+; shutdown
+menu-0-0 = "shutdown"
+menu-0-0-exec = systemctl poweroff
 
 [settings]
 screenchange-reload = true
@@ -463,9 +447,11 @@ screenchange-reload = true
 ;compositing-background = screen
 ;compositing-foreground = source
 ;compositing-border = over
+;pseudo-transparency = false
 
 [global/wm]
-margin-top = 0
-margin-bottom = 0
+margin-top = 5
+margin-bottom = 5
 
 ; vim:ft=dosini
+
