--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -618,6 +618,7 @@ include ~/.cache/wal/colors-kitty.conf
 #: one running on a remote server via SSH can read your clipboard.
 
 # term xterm-kitty
+term xterm-265color
 
 #: The value of the TERM environment variable to set. Changing this
 #: can break many terminal programs, only change it if you know what
