--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -49,6 +49,10 @@ set -g status-interval 10     # redraw status line every 10 seconds
 # clear both screen and history
 bind -n C-l send-keys C-l \; run 'sleep 0.1' \; clear-history
 
+# position
+set -g status-position top
+set -g status-justify left # center align window list
+
 # activity
 set -g monitor-activity on
 set -g visual-activity off
