--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -38,7 +38,6 @@ set -g base-index 1           # start windows numbering at 1
 setw -g pane-base-index 1     # make pane numbering consistent with windows
 
 setw -g automatic-rename on   # rename window to reflect current program
-setw -g automatic-rename on
 setw -g automatic-rename-format '#{?#{||:#{==:#{b:pane_current_command},nvim},#{==:#{b:pane_current_command},bash}},#{b:pane_current_path},#{b:pane_current_command}}'
 
 set -g renumber-windows on    # renumber windows when a window is closed
@@ -48,10 +47,10 @@ set -g set-titles on          # set terminal title
 set -g display-panes-time 800 # slightly longer pane indicators display time
 set -g display-time 1000      # slightly longer status messages display time
 
-set -g status-interval 15     # redraw status line every 10 seconds
+set -g status-interval 10     # redraw status line every 10 seconds
 
 set -g status-position top
-set -g status-justify centre # center align window list
+set -g status-justify left # center align window list
 
 # clear both screen and history
 bind -n C-l send-keys C-l \; run 'sleep 0.1' \; clear-history
