--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -39,3 +39,6 @@ key_bindings:
   - { key: PageDown,  mods: None,          action: ScrollPageDown, mode: ~Alt  }
   - { key: Home,      mods: Shift,         action: ScrollToTop,    mode: ~Alt  }
   - { key: End,       mods: Shift,         action: ScrollToBottom, mode: ~Alt  }
+
+mouse_bindings:
+  - { mouse: Middle, action: PasteSelection }
