--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -67,9 +67,9 @@ bind C-c new-session
 bind C-f command-prompt -p find-session 'switch-client -t %%'
 
 # split current window horizontally
-bind - split-window -v
+bind s split-window -v
 # split current window vertically
-bind _ split-window -h
+bind v split-window -h
 
 # pane navigation
 bind -r h select-pane -L  # move left
@@ -82,7 +82,7 @@ unbind t
 bind -r t next-layout       # swap current pane with the previous one
 
 # maximize current pane
-bind + run 'cut -c3- ~/.tmux.conf | sh -s _maximize_pane "#{session_name}" #D'
+bind f run 'cut -c3- ~/.tmux.conf | sh -s _maximize_pane "#{session_name}" #D'
 
 # pane resizing
 bind -r H resize-pane -L 2
