--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -21,6 +21,13 @@ font:
     x: 1
     y: 1
 
+window:
+  padding:
+    x: 0
+    y: 0
+
+  dynamic_padding: true
+
 draw_bold_text_with_bright_colors: true
 
 key_bindings:
