--- a/waybar/config
+++ b/waybar/config
@@ -77,7 +77,7 @@
             "warning": 70,
             "critical": 90,
         },
-        "on-click": "xfce4-terminal -e 'htop'",
+        "on-click": "alacritty -e 'htop'",
     },
 
     "custom/keyboard-layout": {
@@ -133,10 +133,6 @@
         "format": "  {icon}  ",
         //"format":"{icon}",
         "format-icons": {
-            "1": "",
-            "2": "",
-            "3": "",
-            "4": "",
         }
     },
 
@@ -216,13 +212,13 @@
 
     "custom/launcher": {
         "format":" ",
-        "on-click": "exec wofi -c ~/.config/wofi/config -I",
+        "on-click": "exec rofi -show drun",
         "tooltip": false,
     },
 
     "custom/power": {
         "format":"⏻",
-        "on-click": "exec ~/.config/waybar/scripts/power-menu.sh",
+        "on-click": "exec rofi -show power",
         "tooltip": false,
     },
 
