--- a/sway/config
+++ b/sway/config
@@ -10,3 +10,4 @@ include $HOME/.config/sway/config.d/*
 
 # only enable this if every app you use is compatible with wayland
 # xwayland disable
+include $HOME/.config/sway/autostart
