--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -10,6 +10,7 @@
 # -- general -------------------------------------------------------------------
 
 set -g default-terminal "tmux-256color"
+set -as terminal-overrides ',xterm*:RGB'
 
 setw -g xterm-keys on
 set -s escape-time 10                     # faster command sequences
