--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -1,6 +1,13 @@
 env:
   TERM: xterm-256color
 
+shell:
+  program: /bin/zsh
+  args:
+  - -l
+  - -c
+  - "(cat ~/.cache/wal/sequences &) && tmux"
+
 font:
   normal:
     family: JetBrains Mono
