fix: fix ranger image previewer

--- a/ranger/rc.conf
+++ b/ranger/rc.conf
@@ -1,3 +1,5 @@
 ranger_load_default_rc false
 set preview_images true
+set use_preview_script true
+set preview_images_method ueberzug
 set draw_borders true
