--- a/waybar/config
+++ b/waybar/config
@@ -4,7 +4,6 @@
         "layer": "bottom",
         "position": "top",
         "output": ["DP-1", "eDP-1"],
-        "spacing": 4,
         "include": [
             "~/.config/waybar/modules/monitor",
             "~/.config/waybar/modules/sway",
@@ -12,7 +11,6 @@
             "~/.config/waybar/modules/custom",
         ],
         "modules-left": [
-            "custom/launcher",
             "sway/workspaces",
             "sway/mode",
             "keyboard-state",
@@ -24,6 +22,7 @@
             "temperature",
             "battery",
             "custom/gpu-usage",
+            "custom/weather",
         ],
         "modules-right": [
             "network",
@@ -33,8 +32,11 @@
             "backlight",
             "clock",
             "tray",
-            "custom/weather",
+            "custom/display",
+            "custom/audio",
             "custom/power",
+            "custom/launcher",
+
         ],
     },
     {
@@ -42,7 +44,6 @@
         "layer": "bottom",
         "position": "top",
         "output": ["!DP-1", "!eDP-1", "*"],
-        "spacing": 4,
         "include": [
             "~/.config/waybar/modules/monitor",
             "~/.config/waybar/modules/sway",
