--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -38,21 +38,21 @@ window:
 draw_bold_text_with_bright_colors: true
 
 key_bindings:
-  - {key: V, mods: Control, action: Paste}
-  - {key: C, mods: Control|Shift, action: Copy}
-  - {key: Insert, mods: Shift, action: PasteSelection}
-  - {key: Key0, mods: Control, action: ResetFontSize}
-  - {key: Equals, mods: Control, action: IncreaseFontSize}
-  - {key: Plus, mods: Control, action: IncreaseFontSize}
-  - {key: Minus, mods: Control, action: DecreaseFontSize}
-  - {key: Paste, mods: None, action: Paste}
-  - {key: Copy, mods: None, action: Copy}
-  - {key: L, mods: Control, action: ClearLogNotice}
-  - {key: L, mods: Control, chars: "\f"}
-  - {key: PageUp, mods: None, action: ScrollPageUp, mode: ~Alt}
-  - {key: PageDown, mods: None, action: ScrollPageDown, mode: ~Alt}
-  - {key: Home, mods: Shift, action: ScrollToTop, mode: ~Alt}
-  - {key: End, mods: Shift, action: ScrollToBottom, mode: ~Alt,}
+- {key: V, mods: Control, action: Paste}
+- {key: C, mods: Control|Shift, action: Copy}
+- {key: Insert, mods: Shift, action: PasteSelection}
+- {key: Key0, mods: Control, action: ResetFontSize}
+- {key: Equals, mods: Control, action: IncreaseFontSize}
+- {key: Plus, mods: Control, action: IncreaseFontSize}
+- {key: Minus, mods: Control, action: DecreaseFontSize}
+- {key: Paste, mods: None, action: Paste}
+- {key: Copy, mods: None, action: Copy}
+- {key: L, mods: Control, action: ClearLogNotice}
+- {key: L, mods: Control, chars: "\f"}
+- {key: PageUp, mods: None, action: ScrollPageUp, mode: ~Alt}
+- {key: PageDown, mods: None, action: ScrollPageDown, mode: ~Alt}
+- {key: Home, mods: Shift, action: ScrollToTop, mode: ~Alt}
+- {key: End, mods: Shift, action: ScrollToBottom, mode: ~Alt}
 
 mouse_bindings:
-  - {mouse: Middle, action: PasteSelection}
+- {mouse: Middle, action: PasteSelection}
