--- a/hypr/hyperland.conf
+++ b/hypr/hyperland.conf
@@ -140,10 +140,10 @@ bind = $mainMod, T, togglesplit, # dwindle
 bind = $mainMod, F, fullscreen, # dwindle
 
 # Move focus
-bind = $mainMod, h, movefocus, l
-bind = $mainMod, l, movefocus, r
-bind = $mainMod, k, movefocus, u
-bind = $mainMod, j, movefocus, d
+bind = $mainMod, H, movefocus, l
+bind = $mainMod, L, movefocus, r
+bind = $mainMod, K, movefocus, u
+bind = $mainMod, J, movefocus, d
 
 bind = $mainMod, left, movefocus, l
 bind = $mainMod, right, movefocus, r
