--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -23,25 +23,8 @@ monitor=,preferred,auto,auto
 env = XCURSOR_SIZE,24
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
-input {
-    kb_layout = us
-    kb_variant =
-    kb_model =
-    kb_options =
-    kb_rules =
 
-    follow_mouse = 1
-
-    touchpad {
-        natural_scroll = false
-    }
-
-    sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
-}
-
-device:at-translated-set-2-keyboard {
-    kb_options = ctrl:swapcaps
-}
+source = ~/.config/hypr/config.d/input
 
 general {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
