--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -25,6 +25,7 @@ env = XCURSOR_SIZE,24
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 
 source = ~/.config/hypr/config.d/input
+source = ~/.config/hypr/config.d/exec-once
 
 general {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
