--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -26,6 +26,7 @@ env = XCURSOR_SIZE,24
 
 source = ~/.config/hypr/config.d/input
 source = ~/.config/hypr/config.d/exec-once
+source = ~/.config/hypr/config.d/lid
 
 general {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
