--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -24,10 +24,10 @@ env = XCURSOR_SIZE,24
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 
-source = ~/.config/hypr/config.d/input
-source = ~/.config/hypr/config.d/exec-once
-source = ~/.config/hypr/config.d/monitor
-source = ~/.config/hypr/config.d/lid
+source = ~/.config/hypr/config.d/input.conf
+source = ~/.config/hypr/config.d/exec-once.conf
+source = ~/.config/hypr/config.d/monitor.conf
+source = ~/.config/hypr/config.d/lid.conf
 
 general {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
@@ -105,4 +105,4 @@ misc {
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 
-source = ~/.config/hypr/config.d/binds
+source = ~/.config/hypr/config.d/bind.conf
