--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -19,11 +19,7 @@ monitor=,preferred,auto,auto
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
 
-# Some default env vars.
-env = XCURSOR_SIZE,24
-
-# For all categories, see https://wiki.hyprland.org/Configuring/Variables/
-
+source = ~/.config/hypr/config.d/env.conf
 source = ~/.config/hypr/config.d/input.conf
 source = ~/.config/hypr/config.d/exec-once.conf
 source = ~/.config/hypr/config.d/monitor.conf
