--- a/hypr/config.d/monitor.conf
+++ b/hypr/config.d/monitor.conf
@@ -1,4 +1,4 @@
 monitor=DP-2, 1920x1080, 1920x0, 1, bitdepth,10
 monitor=DP-1, 2560x1440@119.95, 0x0, 1, bitdepth,10,vrr,1
 monitor=eDP-1, preferred, auto, 1, bitdepth,10
-monitor=,preferred,auto,1
+monitor=,preferred,auto,auto
