chore: update waybar

--- a/hypr/config.d/exec-once.conf
+++ b/hypr/config.d/exec-once.conf
@@ -1,4 +1,4 @@
-exec-once = waybar &
+exec-once = waybar
 exec-once = blueman-applet &
 exec-once = nm-applet --indicator &
 exec-once = gammastep-indicator &
