--- a/hypr/config.d/bind.conf
+++ b/hypr/config.d/bind.conf
@@ -17,6 +17,7 @@ bind = $mainMod, L, movefocus, r
 bind = $mainMod, K, movefocus, u
 bind = $mainMod, J, movefocus, d
 
+# Move focus with arrow keys
 bind = $mainMod, left, movefocus, l
 bind = $mainMod, right, movefocus, r
 bind = $mainMod, up, movefocus, u
@@ -33,6 +34,18 @@ bind = $mainMod, 7, workspace, 7
 bind = $mainMod, 8, workspace, 8
 bind = $mainMod, 9, workspace, 9
 bind = $mainMod, 0, workspace, 10
+
+# Move active window
+bind = $mainMod, SHIFT, H, movewindow, l
+bind = $mainMod, SHIFT, L, movewindow, r
+bind = $mainMod, SHIFT, K, movewindow, u
+bind = $mainMod, SHIFT, J, movewindow, d
+
+# Move active window to monitor
+bind = $mainMod, CTRL, H, movecurrentworkspacetomonitor, l
+bind = $mainMod, CTRL, L, movecurrentworkspacetomonitor, r
+bind = $mainMod, CTRL, K, movecurrentworkspacetomonitor, u
+bind = $mainMod, CTRL, J, movecurrentworkspacetomonitor, d
 
 # Move active window to a workspace with mainMod + SHIFT + [0-9]
 bind = $mainMod SHIFT, 1, movetoworkspace, 1
