--- a/hypr/config.d/lid.conf
+++ b/hypr/config.d/lid.conf
@@ -1,4 +1,4 @@
 # TODO
-bindl=,switch:[switch name],exec,swaylock
-bindl=,switch:on:[switch name],exec,hyprctl keyword monitor "eDP-1, 1920x1080, 0x0, 1"
-bindl=,switch:off:[switch name],exec,hyprctl keyword monitor "eDP-1, disable"
+bindl=,switch:[Lid switch],exec,swaylock
+bindl=,switch:on:[Lid switch],exec,hyprctl keyword monitor "eDP-1, 1920x1080, 0x0, 1"
+bindl=,switch:off:[Lid switch],exec,hyprctl keyword monitor "eDP-1, disable"
