fix: move active window

--- a/hypr/config.d/bind.conf
+++ b/hypr/config.d/bind.conf
@@ -36,16 +36,16 @@ bind = $mainMod, 9, workspace, 9
 bind = $mainMod, 0, workspace, 10
 
 # Move active window
-bind = $mainMod, SHIFT, H, movewindow, l
-bind = $mainMod, SHIFT, L, movewindow, r
-bind = $mainMod, SHIFT, K, movewindow, u
-bind = $mainMod, SHIFT, J, movewindow, d
+bind = $mainMod SHIFT, H, movewindow, l
+bind = $mainMod SHIFT, L, movewindow, r
+bind = $mainMod SHIFT, K, movewindow, u
+bind = $mainMod SHIFT, J, movewindow, d
 
 # Move active window to monitor
-bind = $mainMod, CTRL, H, movecurrentworkspacetomonitor, l
-bind = $mainMod, CTRL, L, movecurrentworkspacetomonitor, r
-bind = $mainMod, CTRL, K, movecurrentworkspacetomonitor, u
-bind = $mainMod, CTRL, J, movecurrentworkspacetomonitor, d
+bind = $mainMod CTRL, H, movecurrentworkspacetomonitor, l
+bind = $mainMod CTRL, L, movecurrentworkspacetomonitor, r
+bind = $mainMod CTRL, K, movecurrentworkspacetomonitor, u
+bind = $mainMod CTRL, J, movecurrentworkspacetomonitor, d
 
 # Move active window to a workspace with mainMod + SHIFT + [0-9]
 bind = $mainMod SHIFT, 1, movetoworkspace, 1
