--- a/hypr/config.d/bind.conf
+++ b/hypr/config.d/bind.conf
@@ -6,7 +6,7 @@ bind = $mainMod, RETURN, exec, kitty
 bind = $mainMod, Q, killactive,
 bind = $mainMod, E, exec, dolphin
 bind = $mainMod, V, togglefloating,
-bind = $mainMod, R, exec, rofi -show drun
+bind = $mainMod, SPACE, exec, rofi -show drun
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, T, togglesplit, # dwindle
 bind = $mainMod, F, fullscreen, # dwindle
