--- a/hypr/config.d/bind.conf
+++ b/hypr/config.d/bind.conf
@@ -9,7 +9,7 @@ bind = $mainMod, V, togglefloating,
 bind = $mainMod, SPACE, exec, rofi -show drun
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, T, togglesplit, # dwindle
-bind = $mainMod, F, fullscreen, # dwindle
+bind = $mainMod, F, fullscreen, 1 # dwindle
 
 # Move focus
 bind = $mainMod, H, movefocus, l
