--- a/hypr/config.d/bind.conf
+++ b/hypr/config.d/bind.conf
@@ -72,14 +72,14 @@ bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
 # audio
-bind = XF86AudioMute, exec, pactl -- set-sink-mute @DEFAULT_SINK@ toggle
-bind = XF86AudioLowerVolume, exec, pactl -- set-sink-volume @DEFAULT_SINK@ -5%
-bind = XF86AudioRaiseVolume, exec, pactl -- set-sink-volume @DEFAULT_SINK@ +5%
-bind = XF86AudioPlay, exec, playerctl play-pause
-bind = XF86AudioPause, exec, playerctl pause
-bind = XF86AudioNext, exec, playerctl next
-bind = XF86AudioPrev, exec, playerctl previous
+bind = ,XF86AudioMute, exec, pactl -- set-sink-mute @DEFAULT_SINK@ toggle
+bind = ,XF86AudioLowerVolume, exec, pactl -- set-sink-volume @DEFAULT_SINK@ -5%
+bind = ,XF86AudioRaiseVolume, exec, pactl -- set-sink-volume @DEFAULT_SINK@ +5%
+bind = ,XF86AudioPlay, exec, playerctl play-pause
+bind = ,XF86AudioPause, exec, playerctl pause
+bind = ,XF86AudioNext, exec, playerctl next
+bind = ,XF86AudioPrev, exec, playerctl previous
 
 # brightness
-bind = XF86MonBrightnessUp, exec, brightnessctl -c backlight set +5%
-bind = XF86MonBrightnessDown, exec, brightnessctl -c backlight set 5%-
+bind = ,XF86MonBrightnessUp, exec, brightnessctl -c backlight set +5%
+bind = ,XF86MonBrightnessDown, exec, brightnessctl -c backlight set 5%-
