feat: add waybar restart

--- a/hypr/config.d/bind.conf
+++ b/hypr/config.d/bind.conf
@@ -11,6 +11,9 @@ bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, T, togglesplit, # dwindle
 bind = $mainMod, F, fullscreen, 1 # dwindle
 
+# waybar restart
+bind = $mainMod SHIFT, R, exec, killall waybar; waybar
+
 # Move focus
 bind = $mainMod, H, movefocus, l
 bind = $mainMod, L, movefocus, r
