--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -20,6 +20,7 @@ source = ~/.config/hypr/config.d/input.conf
 source = ~/.config/hypr/config.d/exec-once.conf
 source = ~/.config/hypr/config.d/monitor.conf
 source = ~/.config/hypr/config.d/lid.conf
+source = ~/.config/hypr/config.d/theme.conf
 source = ~/.config/hypr/config.d/looks.conf
 
 # Example windowrule v1
