--- a/hypr/config.d/exec-once.conf
+++ b/hypr/config.d/exec-once.conf
@@ -1,4 +1,6 @@
 exec-once = waybar
+exec-once = swww init
+exec-once = mako
 exec-once = blueman-applet &
 exec-once = nm-applet --indicator &
 exec-once = gammastep-indicator &
