fix: disable allow_tearing

--- a/hypr/config.d/looks.conf
+++ b/hypr/config.d/looks.conf
@@ -9,8 +9,8 @@ general {
 
     layout = dwindle
 
-    # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
-    allow_tearing = false
+    # only 32.3
+    # allow_tearing = false
 }
 
 decoration {
