fix: reload waybar

--- a/hypr/config.d/bind.conf
+++ b/hypr/config.d/bind.conf
@@ -12,7 +12,7 @@ bind = $mainMod, T, togglesplit, # dwindle
 bind = $mainMod, F, fullscreen, 1 # dwindle
 
 # waybar restart
-bind = $mainMod SHIFT, R, exec, killall -SIGUSR2 waybar || waybar
+bind = $mainMod SHIFT, R, exec, killall waybar && waybar
 
 # Move focus
 bind = $mainMod, H, movefocus, l
