--- a/hypr/config.d/exec-once.conf
+++ b/hypr/config.d/exec-once.conf
@@ -1,6 +1,13 @@
+# basic
 exec-once = waybar
 exec-once = swww init
 exec-once = mako
+
+# applets
 exec-once = blueman-applet
 exec-once = nm-applet --indicator
 exec-once = gammastep-indicator
+
+# may not work if xdg-portal were already started
+exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
