--- a/hypr/config.d/bind.conf
+++ b/hypr/config.d/bind.conf
@@ -76,6 +76,7 @@ bindm = $mainMod, mouse:273, resizewindow
 
 # audio
 bind = ,XF86AudioMute, exec, pactl -- set-sink-mute @DEFAULT_SINK@ toggle
+bind = ,XF86AudioMicMute, exec, pactl -- set-source-mute @DEFAULT_SOURCE@ toggle
 bind = ,XF86AudioLowerVolume, exec, pactl -- set-sink-volume @DEFAULT_SINK@ -5%
 bind = ,XF86AudioRaiseVolume, exec, pactl -- set-sink-volume @DEFAULT_SINK@ +5%
 bind = ,XF86AudioPlay, exec, playerctl play-pause
