feat: replace thunar

--- a/hypr/config.d/bind.conf
+++ b/hypr/config.d/bind.conf
@@ -4,7 +4,7 @@ $mainMod = ALT
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, RETURN, exec, kitty
 bind = $mainMod, Q, killactive,
-bind = $mainMod, E, exec, dolphin
+bind = $mainMod, E, exec, thunar
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, SPACE, exec, rofi -show drun
 bind = $mainMod, P, pseudo, # dwindle
