--- a/hypr/config.d/exec-once.conf
+++ b/hypr/config.d/exec-once.conf
@@ -15,3 +15,6 @@ exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CUR
 # gtk settings
 exec-once = gsettings set org.gnome.desktop.interface gtk-theme 'FlatColor'
 exec-once = gsettings set org.gnome.desktop.interface icon-theme 'FlattrColor'
+
+# polkit
+exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
