feat: use alacritty instead of kitty

--- a/hypr/config.d/bind.conf
+++ b/hypr/config.d/bind.conf
@@ -2,7 +2,7 @@
 $mainMod = ALT
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, RETURN, exec, kitty
+bind = $mainMod, RETURN, exec, alacritty
 bind = $mainMod, Q, killactive,
 bind = $mainMod, E, exec, thunar
 bind = $mainMod, V, togglefloating,
