--- a/hypr/config.d/exec-once.conf
+++ b/hypr/config.d/exec-once.conf
@@ -18,3 +18,11 @@ exec-once = gsettings set org.gnome.desktop.interface icon-theme 'FlattrColor'
 
 # polkit
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
+
+# swayidle
+exec-once = swayidle -w \
+    timeout 60 'hyprctl dispatch dpms off' \
+    timeout 60 'playerctl pause' \
+    timeout 300 'swaylock -f -c 000000' \
+    before-sleep 'swaylock -f -c 000000'
+    resume 'hyprctl dispatch dpms on' \
