--- a/hypr/config.d/exec-once.conf
+++ b/hypr/config.d/exec-once.conf
@@ -25,4 +25,4 @@ exec-once = swayidle -w \
     timeout 60 'playerctl pause' \
     timeout 300 'swaylock -f -c 000000' \
     before-sleep 'swaylock -f -c 000000'
-    resume 'hyprctl dispatch dpms on' \
+    resume 'hyprctl dispatch dpms on'
