--- a/hypr/config.d/exec-once.conf
+++ b/hypr/config.d/exec-once.conf
@@ -23,6 +23,6 @@ exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec-once = swayidle -w \
     timeout 60 'hyprctl dispatch dpms off' \
     timeout 60 'playerctl pause' \
-    timeout 300 'swaylock -f -c 000000' \
-    before-sleep 'swaylock -f -c 000000'
+    timeout 300 'swaylock -f -i $HOME/.cache/wal/wallpaper --scaling=fill --ignore-empty-password ' \
+    before-sleep 'swaylock -f -i $HOME/.cache/wal/wallpaper --scaling=fill --ignore-empty-password'
     resume 'hyprctl dispatch dpms on'
