fix: swayidle again

--- a/hypr/config.d/exec-once.conf
+++ b/hypr/config.d/exec-once.conf
@@ -24,5 +24,5 @@ exec-once = swayidle -w \
     timeout 60 'hyprctl dispatch dpms off' \
     timeout 60 'playerctl pause' \
     timeout 300 'swaylock -f -i $HOME/.cache/wal/wallpaper --ignore-empty-password' \
-    before-sleep 'swaylock -f -i $HOME/.cache/wal/wallpaper --ignore-empty-password'
+    before-sleep 'swaylock -f -i $HOME/.cache/wal/wallpaper --ignore-empty-password' \
     resume 'hyprctl dispatch dpms on'
