feat: add config for swayidle

--- a/hypr/config.d/exec-once.conf
+++ b/hypr/config.d/exec-once.conf
@@ -20,8 +20,4 @@ exec-once = gsettings set org.gnome.desktop.interface icon-theme 'FlattrColor'
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 
 # swayidle
-exec-once = swayidle -w timeout 60 'hyprctl dispatch dpms off'
-exec-once = swayidle -w timeout 60 'playerctl pause'
-exec-once = swayidle -w timeout 300 'swaylock -f -i $HOME/.cache/wal/wallpaper --ignore-empty-password'
-exec-once = swayidle -w before-sleep 'swaylock -f -i $HOME/.cache/wal/wallpaper --ignore-empty-password'
-exec-once = swayidle -w resume 'hyprctl dispatch dpms on'
+exec-once = swayidle
