--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -5,4 +5,5 @@ source = ~/.config/hypr/config.d/monitor.conf
 source = ~/.config/hypr/config.d/lid.conf
 source = ~/.config/hypr/config.d/theme.conf
 source = ~/.config/hypr/config.d/looks.conf
+source = ~/.config/hypr/config.d/rules.conf
 source = ~/.config/hypr/config.d/bind.conf
