feat(hyprland): add autostart

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -7,3 +7,4 @@ source = ~/.config/hypr/config.d/theme.conf
 source = ~/.config/hypr/config.d/looks.conf
 source = ~/.config/hypr/config.d/rules.conf
 source = ~/.config/hypr/config.d/bind.conf
+source = ~/.config/hypr/config.d/autostart.conf
