--- a/hypr/config.d/general.conf
+++ b/hypr/config.d/general.conf
@@ -4,8 +4,8 @@ general {
     gaps_in = 3
     gaps_out = 10
     border_size = 2
-    col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
-    col.inactive_border = rgba(595959aa)
+    col.active_border = $color1 $color2 45deg
+    col.inactive_border = $color0
 
     layout = dwindle
 
@@ -27,7 +27,7 @@ decoration {
     drop_shadow = true
     shadow_range = 4
     shadow_render_power = 3
-    col.shadow = rgba(1a1a1aee)
+    col.shadow = $color0
 }
 
 animations {
