--- a/hypr/config.d/exec-once.conf
+++ b/hypr/config.d/exec-once.conf
@@ -15,6 +15,7 @@ exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CUR
 # gtk settings
 exec-once = gsettings set org.gnome.desktop.interface gtk-theme 'FlatColor'
 exec-once = gsettings set org.gnome.desktop.interface icon-theme 'FlattrColor'
+exec-once = gsettings set org.gnome.desktop.interface font-name 'JetBrainsMono Nerd Font Regular 10'
 
 # polkit
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
