fix: flameshot hypr

--- a/hypr/config.d/rules.conf
+++ b/hypr/config.d/rules.conf
@@ -6,3 +6,5 @@
 
 windowrulev2=move 0 0,title:^(flameshot)
 windowrulev2=nofullscreenrequest,title:^(flameshot)
+windowrulev2=float,title:^(flameshot)
+windowrulev2=noborder,title:^(flameshot)
