--- a/hypr/config.d/general.conf
+++ b/hypr/config.d/general.conf
@@ -60,3 +60,9 @@ gestures {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
     workspace_swipe = false
 }
+
+misc {
+    disable_hyprland_logo = true
+    force_hypr_chan = false
+    force_default_wallpaper = 0
+}
