feat(hypr): bind to layout

--- a/hypr/config.d/bind.conf
+++ b/hypr/config.d/bind.conf
@@ -87,3 +87,6 @@ bind = ,XF86AudioPrev, exec, playerctl previous
 # brightness
 bind = ,XF86MonBrightnessUp, exec, brightnessctl -c backlight set +5%
 bind = ,XF86MonBrightnessDown, exec, brightnessctl -c backlight set 5%-
+
+# keyboard
+bind = SUPER, SPACE, exec, hyprctl switchxkblayout keyboard next
