fix(hypr): add script to switch layout

--- a/hypr/config.d/bind.conf
+++ b/hypr/config.d/bind.conf
@@ -89,4 +89,4 @@ bind = ,XF86MonBrightnessUp, exec, brightnessctl -c backlight set +5%
 bind = ,XF86MonBrightnessDown, exec, brightnessctl -c backlight set 5%-
 
 # keyboard
-bind = SUPER, SPACE, exec, hyprctl switchxkblayout keyboard next
+bind = SUPER, SPACE, exec, $HOME/.config/hypr/scripts/layout_switcher.sh
