fix(hypr): fix swww

--- a/hypr/config.d/exec-once.conf
+++ b/hypr/config.d/exec-once.conf
@@ -1,6 +1,6 @@
 # basic
 exec-once = waybar
-exec-once = swww init && swww img $wallpaper
+exec-once = sleep 5 && swww init
 exec-once = mako
 
 # applets
