chore: comment other prefix

--- a/tmux/tmux.new.conf
+++ b/tmux/tmux.new.conf
@@ -10,7 +10,7 @@ setw -q -g utf8 on
 set -g prefix C-space
 unbind-key C-b
 bind-key C-space send-prefix
-bind-key C-a send-prefix
+# bind-key C-a send-prefix
 
 bind r source-file ~/.tmux.conf \; display '~/.tmux.conf sourced'
 
