--- a/tmux/tmux.new.conf
+++ b/tmux/tmux.new.conf
@@ -14,5 +14,28 @@ bind-key C-space send-prefix
 
 bind r source-file ~/.tmux.conf \; display '~/.tmux.conf sourced'
 
+# splits
+bind s split-window -v
+bind v split-window -h
+
+# panes
+bind -r h select-pane -L  # move left
+bind -r j select-pane -D  # move down
+bind -r k select-pane -U  # move up
+bind -r l select-pane -R  # move right
+bind > swap-pane -D       # swap current pane with the next one
+bind < swap-pane -U       # swap current pane with the previous one
+unbind t
+bind -r t next-layout       # swap current pane with the previous one
+
+# maximize current pane
+bind f run 'cut -c3- ~/.tmux.conf | sh -s _maximize_pane "#{session_name}" #D'
+
+# pane resizing
+bind -r H resize-pane -L 2
+bind -r J resize-pane -D 2
+bind -r K resize-pane -U 2
+bind -r L resize-pane -R 2
+
 # style
 setw -g window-status-current-style bg=black,fg=white,bright
