--- a/tmux/tmux.new.conf
+++ b/tmux/tmux.new.conf
@@ -5,6 +5,10 @@ set-option -g default-shell /bin/zsh
 set -s escape-time 10                     # faster command sequences
 set -q -g status-utf8 on                  # expect UTF-8 (tmux < 2.2)
 setw -q -g utf8 on
+set -g status-position top
+
+# dynamic tab rename
+set-option -g automatic-rename-format '#{?#{||:#{==:#{b:pane_current_command},nvim},#{==:#{b:pane_current_command},zsh}},#{b:pane_current_path},#{b:pane_current_command}}'
 
 # bindings
 set -g prefix C-space
