feat: prefix tmux

--- a/tmux/tmux.new.conf
+++ b/tmux/tmux.new.conf
@@ -10,11 +10,13 @@ set -g status-position top
 # dynamic tab rename
 set-option -g automatic-rename-format '#{?#{||:#{==:#{b:pane_current_command},nvim},#{==:#{b:pane_current_command},zsh}},#{b:pane_current_path},#{b:pane_current_command}}'
 
-# bindings
-set -g prefix C-space
-unbind-key C-b
-bind-key C-space send-prefix
-# bind-key C-a send-prefix
+### BINDINGS ###
+
+# prefix
+unbind C-b
+unbind C-a
+set -g prefix C-a
+bind-key C-a send-prefix
 
 bind r source-file ~/.tmux.conf \; display '~/.tmux.conf sourced'
 
