--- a/tmux/tmux.new.conf
+++ b/tmux/tmux.new.conf
@@ -43,5 +43,12 @@ bind -r J resize-pane -D 2
 bind -r K resize-pane -U 2
 bind -r L resize-pane -R 2
 
+# window navigation
+unbind n
+unbind p
+bind -r C-h previous-window # select previous window
+bind -r C-l next-window     # select next window
+bind Tab last-window        # move to last active window
+
 # style
 setw -g window-status-current-style bg=black,fg=white,bright
