feat: update tmux

--- a/tmux/tmux.new.conf
+++ b/tmux/tmux.new.conf
@@ -1,7 +1,13 @@
-# basic
+### BASIC ###
+
+# terminal
 set -g default-terminal "tmux-256color"
 set -as terminal-overrides ',xterm*:RGB'
+
+# shell
 set-option -g default-shell /bin/zsh
+
+# something
 set -s escape-time 10                     # faster command sequences
 set -q -g status-utf8 on                  # expect UTF-8 (tmux < 2.2)
 setw -q -g utf8 on
@@ -9,6 +15,9 @@ set -g status-position top
 
 # dynamic tab rename
 set-option -g automatic-rename-format '#{?#{||:#{==:#{b:pane_current_command},nvim},#{==:#{b:pane_current_command},zsh}},#{b:pane_current_path},#{b:pane_current_command}}'
+
+# start with mouse mode enabled
+set -g mouse on
 
 ### BINDINGS ###
 
