feat: vi mode tmux

--- a/tmux/tmux.new.conf
+++ b/tmux/tmux.new.conf
@@ -19,6 +19,10 @@ set-option -g automatic-rename-format '#{?#{||:#{==:#{b:pane_current_command},nv
 # start with mouse mode enabled
 set -g mouse on
 
+# force Vi mode, really you should export VISUAL or EDITOR environment variable, see manual
+set -g status-keys vi
+set -g mode-keys vi
+
 ### BINDINGS ###
 
 # prefix
