--- a/tmux/tmux.new.conf
+++ b/tmux/tmux.new.conf
@@ -81,3 +81,5 @@ run -b 'tmux bind -t vi-copy H start-of-line 2> /dev/null || true'
 run -b 'tmux bind -T copy-mode-vi H send -X start-of-line 2> /dev/null || true'
 run -b 'tmux bind -t vi-copy L end-of-line 2> /dev/null || true'
 run -b 'tmux bind -T copy-mode-vi L send -X end-of-line 2> /dev/null || true'
+
+bind-key -T copy-mode-vi : run "tmux split-window -h -l 3 -b 'while [ \$SECONDS -lt 10 ]; do seq $(tput lines) -1 1; sleep 1; clear; done'; tmux last-pane; sleep 0.15" \; command-prompt -p "Go to line:" "send-keys -X goto-line %%;"
