fix: fast jump tmux

--- a/tmux/tmux.new.conf
+++ b/tmux/tmux.new.conf
@@ -67,6 +67,8 @@ bind Tab last-window        # move to last active window
 setw -g window-status-current-style bg=black,fg=white,bright
 
 ### VIM MODE ###
+bind / copy-mode \; send-key ?
+
 bind Enter copy-mode # enter copy mode
 
 run -b 'tmux bind -t vi-copy v begin-selection 2> /dev/null || true'
@@ -81,5 +83,3 @@ run -b 'tmux bind -t vi-copy H start-of-line 2> /dev/null || true'
 run -b 'tmux bind -T copy-mode-vi H send -X start-of-line 2> /dev/null || true'
 run -b 'tmux bind -t vi-copy L end-of-line 2> /dev/null || true'
 run -b 'tmux bind -T copy-mode-vi L send -X end-of-line 2> /dev/null || true'
-
-bind-key -T copy-mode-vi : run "tmux split-window -h -l 3 -b 'while [ \$SECONDS -lt 10 ]; do seq $(tput lines) -1 1; sleep 1; clear; done'; tmux last-pane; sleep 0.15" \; command-prompt -p "Go to line:" "send-keys -X goto-line %%;"
