fix: repeat timeout tmux

--- a/tmux/tmux.new.conf
+++ b/tmux/tmux.new.conf
@@ -7,10 +7,13 @@ set -as terminal-overrides ',xterm*:RGB'
 # shell
 set-option -g default-shell /bin/zsh
 
-# something
-set -s escape-time 10                     # faster command sequences
+# utf8
 set -q -g status-utf8 on                  # expect UTF-8 (tmux < 2.2)
 setw -q -g utf8 on
+
+# something
+set -s escape-time 10                     # faster command sequences
+set -sg repeat-time 100                   # timeout to add another command 
 set -g status-position top
 
 # index
