feat: tmux display

--- a/tmux/tmux.new.conf
+++ b/tmux/tmux.new.conf
@@ -30,6 +30,10 @@ set -g mouse on
 set -g status-keys vi
 set -g mode-keys vi
 
+# raise message show
+set-option -g display-time 3000
+set-option -g display-panes-time 3000
+
 ### BINDINGS ###
 
 # prefix
