--- a/tmux/tmux.new.conf
+++ b/tmux/tmux.new.conf
@@ -99,6 +99,7 @@ run -b 'tmux bind -T copy-mode-vi L send -X end-of-line 2> /dev/null || true'
 ### Plugins ###
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'christoomey/vim-tmux-navigator'
 
 if "test ! -d ~/.tmux/plugins/tpm" \
    "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm && ~/.tmux/plugins/tpm/bin/install_plugins'"
