feat: tmux index at 1

--- a/tmux/tmux.new.conf
+++ b/tmux/tmux.new.conf
@@ -15,9 +15,11 @@ setw -q -g utf8 on
 set -sg repeat-time 100                   # timeout to add another command
 set -g status-position top
 
-# index
-set -g base-index 1           # start windows numbering at 1
-setw -g pane-base-index 1     # make pane numbering consistent with windows
+# start index at 1
+set -g base-index 1
+set -g pane-base-index 1
+set-window-option -g pane-base-index 1
+set-option -g renumber-windows on
 
 # dynamic tab rename
 set-option -g automatic-rename-format '#{?#{||:#{==:#{b:pane_current_command},nvim},#{==:#{b:pane_current_command},zsh}},#{b:pane_current_path},#{b:pane_current_command}}'
