feat: tmux split in current path

--- a/tmux/tmux.new.conf
+++ b/tmux/tmux.new.conf
@@ -47,8 +47,8 @@ bind-key C-a send-prefix
 bind r source-file ~/.tmux.conf \; display '~/.tmux.conf sourced'
 
 # splits
-bind s split-window -v
-bind v split-window -h
+bind s split-window -v -c "#{pane_current_path}"
+bind v split-window -h -c "#{pane_current_path}"
 
 # panes
 bind -r h select-pane -L  # move left
