fix: tmux clean

--- a/tmux/tmux.new.conf
+++ b/tmux/tmux.new.conf
@@ -43,6 +43,9 @@ unbind C-a
 set -g prefix C-a
 bind-key C-a send-prefix
 
+# restore c-l to clean console
+bind C-l send-keys 'C-l'
+
 # reload config
 bind r source-file ~/.tmux.conf \; display '~/.tmux.conf sourced'
 
