fix: index tmux

--- a/tmux/tmux.new.conf
+++ b/tmux/tmux.new.conf
@@ -15,11 +15,12 @@ setw -q -g utf8 on
 set -sg repeat-time 1000                   # timeout to add another command
 set -g status-position top
 
-# start index at 1
+# start index at 1 and fix indexes
 set -g base-index 1
 set -g pane-base-index 1
-set-window-option -g pane-base-index 1
-set-option -g renumber-windows on
+setw -g pane-base-index 1
+set -g renumber-windows on
+setw -g automatic-rename on
 
 # dynamic tab rename
 set-option -g automatic-rename-format '#{?#{||:#{==:#{b:pane_current_command},nvim},#{==:#{b:pane_current_command},zsh}},#{b:pane_current_path},#{b:pane_current_command}}'
