fix: new window

--- a/tmux/tmux.new.conf
+++ b/tmux/tmux.new.conf
@@ -50,7 +50,8 @@ bind C-l send-keys 'C-l'
 # reload config
 bind r source-file ~/.tmux.conf \; display '~/.tmux.conf sourced'
 
-# splits
+# new/split windows
+bind c new-window
 bind s split-window -v -c "#{pane_current_path}"
 bind v split-window -h -c "#{pane_current_path}"
 
