feat: window navigation

--- a/tmux/tmux.new.conf
+++ b/tmux/tmux.new.conf
@@ -82,8 +82,12 @@ bind -r L resize-pane -R 5
 # window navigation
 unbind n
 unbind p
-bind -r C-p previous-window # select previous window
-bind -r C-n next-window     # select next window
+bind -r p previous-window
+bind -r n next-window
+unbind h
+unbind l
+bind -r h previous-window
+bind -r l next-window
 
 # style
 setw -g window-status-current-style bg=black,fg=white,bright
