fix: add selection tmux

--- a/tmux/tmux.new.conf
+++ b/tmux/tmux.new.conf
@@ -108,3 +108,6 @@ if "test ! -d ~/.tmux/plugins/tpm" \
 run '~/.tmux/plugins/tpm/tpm'
 
 set -g @tmux_power_theme 'default'
+
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
