fix: comment tmux window commandsd

--- a/tmux/tmux.new.conf
+++ b/tmux/tmux.new.conf
@@ -80,10 +80,10 @@ bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
 
 # window navigation
-unbind n
-unbind p
-bind -r p previous-window
-bind -r n next-window
+# unbind n
+# unbind p
+# bind -r p previous-window
+# bind -r n next-window
 unbind h
 unbind l
 bind -r h previous-window
