feat(hypr): keyboard backlight comment

--- a/hypr/config.d/bind.conf
+++ b/hypr/config.d/bind.conf
@@ -87,6 +87,8 @@ bind = ,XF86AudioPrev, exec, playerctl previous
 # brightness
 bind = ,XF86MonBrightnessUp, exec, brightnessctl -c backlight set +5%
 bind = ,XF86MonBrightnessDown, exec, brightnessctl -c backlight set 5%-
+# bind = , code:238, exec, brightnessctl -d smc::kbd_backlight s +10
+# bind = , code:237, exec, brightnessctl -d smc::kbd_backlight s 10-
 
 # keyboard
 bind = SUPER, SPACE, exec, $HOME/.config/hypr/scripts/layout_switcher.sh
