fix device config

--- a/hypr/config.d/input.conf
+++ b/hypr/config.d/input.conf
@@ -14,7 +14,20 @@ input {
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 }
 
-device:at-translated-set-2-keyboard {
+device {
+    name = at-translated-set-2-keyboard
     kb_layout = us,us(intl),br
     kb_options = ctrl:swapcaps
+}
+
+device  {
+    name = synps/2-synaptics-touchpad
+   sensitivity = 0
+}
+
+device {
+    name = tpps/2-ibm-trackpoint
+    sensitivity = -0.5
+    accel_profile = custom
+    scroll_points =  0.2 0.0 0.5 1 1.2 1.5
 }
