--- a/hypr/config.d/exec-once.conf
+++ b/hypr/config.d/exec-once.conf
@@ -3,6 +3,7 @@ exec-once = waybar
 exec-once = swww init
 exec-once = mako
 exec-once = kanshi
+exec-once = arch-audit-gtk
 
 # applets
 exec-once = blueman-applet
