fix for picture in picture

--- a/hypr/config.d/rules.conf
+++ b/hypr/config.d/rules.conf
@@ -8,3 +8,6 @@
 windowrulev2=float,title:^(flameshot)
 windowrulev2=move 0 0,title:^(flameshot)
 windowrulev2=suppressevent fullscreen,title:^(flameshot)
+
+windowrulev2 = float, title:^(Picture in picture)$
+windowrulev2 = pin, title:^(Picture in picture)$
